--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -30,4 +30,5 @@
 # available at http://guides.rubyonrails.org/i18n.html.
 
 en:
-  hello: "Hello world"
+  search: "Search"
+  search_placeholder: "Rechercher une annonce"
