--- a/config/locales/fr.yml
+++ b/config/locales/fr.yml
@@ -32,3 +32,6 @@
 fr:
   search: "Rechercher"
   search_placeholder: "Rechercher une annonce"
+  main_title: "Petites annonces"
+  create_ad_btn: "Créer une annonce"
+  login_btn: "Me connecter"
