--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -35,3 +35,6 @@ en:
   main_title: "Littles ads"
   create_ad_btn: "Create an ad"
   login_btn: "Login"
+  logout_btn: "Logout"
+  sign_up_btn: "Signup"
+
