--- a/config/locales/fr.yml
+++ b/config/locales/fr.yml
@@ -35,3 +35,6 @@ fr:
   main_title: "Petites annonces"
   create_ad_btn: "Créer une annonce"
   login_btn: "Me connecter"
+  logout_btn: "Déconnection"
+  sign_up_btn: "Inscription"
+
