--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -31,10 +31,10 @@
 
 en:
   search: "Search"
+  search_title: "You're going to find..."
   search_placeholder: "Search some ads"
   main_title: "Littles ads"
   create_ad_btn: "Create an ad"
   login_btn: "Login"
   logout_btn: "Logout"
   sign_up_btn: "Signup"
-
