--- a/config/locales/fr.yml
+++ b/config/locales/fr.yml
@@ -31,10 +31,10 @@
 
 fr:
   search: "Rechercher"
+  search_title: "Vous allez trouver..."
   search_placeholder: "Rechercher une annonce"
   main_title: "Petites annonces"
   create_ad_btn: "Créer une annonce"
   login_btn: "Me connecter"
   logout_btn: "Déconnection"
   sign_up_btn: "Inscription"
-
